Making stylesheet load faster (maybe). Styling tweak for modal on smaller window. Fixing usage of back button on modal (somewhat).

--- a/greasemonkey/fogbugz-helper/fogbugz-helper.css
+++ b/greasemonkey/fogbugz-helper/fogbugz-helper.css
@@ -76,6 +76,10 @@ body {
   opacity: 0;
 }
 
+#stacking-context-main > #main {
+  padding: 5.55em 1em 0.5em;
+}
+
 /* modal main */
 
 body.main-has-content {
